[package]
name = "ioc_extract"
version = "0.1.1"
authors = ["Marirs <marirs@gmail.com>"]
description = "Extract indicators like urls,domains,ip,emails,etc... from a given string"
keywords = ["ioc", "indicators", "emails", "domains", "urls"]
readme = "README.md"
exclude = ["assets", "examples"]
edition = "2021"

[dependencies]
idna = "0.2"
lazy_static = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }

[lib]
name = "ioc_extract"
path = "src/lib.rs"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
