[package]
name = "ioc_extract"
version = "0.3.3"
description = "Extract indicators like urls,domains,ip,emails,etc... from a given string"
authors = ["Marirs <marirs@gmail.com>"]
homepage = "https://github.com/marirs/ioc_extract-rs"
repository = "https://github.com/marirs/ioc_extract-rs"
keywords = ["ioc", "indicators", "emails", "domains", "urls"]
readme = "README.md"
license-file = "LICENSE"
exclude = ["data", "examples"]
edition = "2021"

[dependencies]
fancy-regex = "0.7"
idna = "0.2"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
tld_download = { version = "0.1.1", features = ["with-db"] }

[lib]
name = "ioc_extract"
path = "src/lib.rs"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
